--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.18.0",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-currency-format": "^1.1.0",
