--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "firebase": "^9.18.0",
+    "jquery": "^3.6.4",
     "nanoid": "^4.0.2",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.3",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
